Different reports for URS 'All Calls' for main dialog